infra/subnet.tf
resource "aws_subnet" "public_subnet" {
  vpc_id                  = aws_vpc.camunda_vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "ap-south-1a"
  map_public_ip_on_launch = true

  tags = {
    Name = "camunda-public-subnet"
  }
}
